tests/spring-service/simple-service/expected/spring-service/templates/post-deployment/ingress.yaml
---
# Source: spring-service/templates/post-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice
  namespace: "team-supercool"
spec:
  rules:
    - host: myservice.mycompany.tld
      http:
        paths:
          - path: /
            backend:
              serviceName: myservice
              servicePort: 80
